# Mangatools

./: README  README.md  browser.py  cleanup.py  extract_and_sort.py  fetch_chapters_name.py  files_to_delete.txt  files_to_delete_patterns.txt  main.py  manga_chan_downloader.py  progress.py  pyproject.toml  test.py
delete_configs/: Berserk.txt  template.txt
gui/: buttons_click.py  config_editor.py  flet_gui.py  gui.py  new_gui.py  old_gui.py  overlay.py  super_new_gui.py  theme.py
