[project]
name = "mangatools"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "customtkinter>=5.2.2",
    "flet>=0.80.0",
    "imageio>=2.37.2",
    "loguru>=0.7.3",
    "playwright>=1.56.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruff>=0.14.8",
]
